Fixed classes for javascript collapse

--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -31,6 +31,6 @@ a.selected {
   opacity: 1;
 }
 
-.panel-body {
+.report-form {
   display: none;
 }
